# Test_compare

./: CMakeLists.txt  README.md  compare_poly.py  compare_single_test.py  compare_util.py  diff_dbf.py  diff_funct.py  diff_gv.py  diff_shapefiles.py  diff_shapes.py  diff_shp  diff_shp.py  jumble.py  max_diff_rect.f90  nccmp.py  nccmp_meta.py  nccmp_pism.py  pyproject.toml  re_compare  re_compare.py  requirements.txt  selective_diff  selective_diff.py  selective_diff.sh  test_compare  test_compare.py  tests.py
Test_compare/: cat_compar.py  compare_single_test.py  detailed_diff.py  diff_dbf.py  diff_gv.py  diff_shapes.py  diff_shp.py  nccmp.py  re_compare.py  read_runs.py  selective_diff.py  test_compare.py
Test_dir1/: namelists.txt  parallel_compilation.csv  villes_monde.txt
Test_dir1/Subdir/: Voyager_C2H4.txt  classes.nc  extremum.dbf  extremum.shp  extremum.shx  machines_Rataud.txt  outermost_contour.dbf  outermost_contour.shp  outermost_contour.shx
Test_dir2/: feuilles.txt  namelists.txt  parallel_compilation.csv  ua_model.nc  villes_monde.txt
Test_dir2/Subdir/: Voyager_C2H4.txt  classes.nc  extremum.shp  extremum.shx  outermost_contour.dbf  outermost_contour.shp  outermost_contour.shx
testcmp/: cat_compar.py  compare_single_test.py  detailed_diff.py  diff_csv.py  diff_dbf.py  diff_shapes.py  diff_shp.py  diff_txt.py  read_runs.py  selective_diff.py  test_compare.py
