[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testcmp"
version = "0.10"
authors = [
  { name="Lionel GUEZ", email="guez@lmd.ipsl.fr" },
]
description = "Testing by comparison to previous runs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lguez/Test_compare"
Issues = "https://github.com/lguez/Test_compare/issues"

[tool.hatch.build.targets.sdist]
exclude = ["*~"]

[project.scripts]
test_compare = "testcmp.test_compare:main_cli"
diff_dbf = "testcmp.diff_dbf:main_cli"
diff_gv = "testcmp.diff_gv:main_cli"
diff_shp = "testcmp.diff_shp:main_cli"
nccmp = "testcmp.nccmp:main_cli"
re_compare = "testcmp.re_compare:main_cli"
selective_diff = "testcmp.selective_diff:main_cli"
